<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="60dp">

    <ImageView
        android:id="@+id/imageView_icon_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buy" />

    <TextView
        android:id="@+id/textView_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/item_name"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/imageView_icon_condition"
        app:layout_constraintTop_toTopOf="@id/imageView_icon_condition" />

    <TextView
        android:id="@+id/textView_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_quantity"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/textView_item_name"
        app:layout_constraintTop_toBottomOf="@id/textView_item_name" />

    <TextView
        android:id="@+id/textView_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:text="@string/item_size"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/textView_quantity"
        app:layout_constraintTop_toTopOf="@id/textView_quantity" />


    <Switch
        android:id="@+id/switch_bought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_bought"
        app:layout_constraintBottom_toBottomOf="@id/imageView_icon_condition"
        app:layout_constraintLeft_toRightOf="@id/imageView_icon_condition"
        app:layout_constraintTop_toTopOf="@id/imageView_icon_condition"
        android:layout_marginLeft="250dp"/>

    <TextView
        android:id="@+id/textView_date_bought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_date_bought"
        app:layout_constraintBottom_toBottomOf="@id/imageView_icon_condition"
        app:layout_constraintLeft_toRightOf="@id/imageView_icon_condition"
        app:layout_constraintTop_toTopOf="@id/imageView_icon_condition"
        android:layout_marginLeft="200dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>