<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textView_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/editText_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_shopping_item"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@id/textView_item"
        app:layout_constraintTop_toBottomOf="@id/textView_item" />

    <TextView
        android:id="@+id/textView_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_details"
        app:layout_constraintLeft_toLeftOf="@id/textView_item"
        app:layout_constraintTop_toBottomOf="@id/editText_item_name" />

    <EditText
        android:id="@+id/editText_details"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="4"
        android:outlineProvider="background"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="@id/textView_item"
        app:layout_constraintTop_toBottomOf="@id/textView_details" />

    <TextView
        android:id="@+id/textView_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_quantity"
        app:layout_constraintLeft_toLeftOf="@id/textView_item"
        app:layout_constraintTop_toBottomOf="@id/editText_details" />


    <ImageButton
        android:id="@+id/imageButton_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/textView_item"
        app:layout_constraintTop_toBottomOf="@id/textView_quantity"
        app:srcCompat="@drawable/arrow_down" />


    <EditText
        android:id="@+id/editText_quantity"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/custom_input"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:text="1"
        app:layout_constraintLeft_toRightOf="@id/imageButton_arrow_down"
        app:layout_constraintTop_toTopOf="@id/imageButton_arrow_down" />

    <ImageButton
        android:id="@+id/imageButton_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/editText_quantity"
        app:layout_constraintTop_toTopOf="@id/imageButton_arrow_down"
        app:srcCompat="@drawable/arrow_up" />

    <CheckBox
        android:id="@+id/checkBox_urgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_urgent"
        app:layout_constraintLeft_toLeftOf="@id/textView_quantity"
        app:layout_constraintTop_toBottomOf="@id/imageButton_arrow_up" />

    <TextView
        android:id="@+id/textView_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/label_size"
        app:layout_constraintLeft_toRightOf="@id/textView_quantity"
        app:layout_constraintTop_toTopOf="@id/textView_quantity" />

    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@drawable/custom_input"
        app:layout_constraintLeft_toLeftOf="@id/textView_size"
        app:layout_constraintTop_toTopOf="@id/imageButton_arrow_down" />

    <Button
        android:id="@+id/button_addToList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_label_addToList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_urgent"
        android:background="@drawable/button_design"
        android:textColor="@android:color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>